styling fixes on text overflow

--- a/app/assets/stylesheets/components/_card-with-text.scss
+++ b/app/assets/stylesheets/components/_card-with-text.scss
@@ -42,7 +42,7 @@
   flex-direction: column;
   justify-content: space-around;
   background-color: white !important;
-
+  overflow-y: hidden;
 }
 
 .a-card-text h3 a b {
